--- a/Drive_Calendar/templates/LogIn.html
+++ b/Drive_Calendar/templates/LogIn.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>App Drive</title>
+	<title>App Drive | Log In</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -35,16 +35,17 @@
                 <div class="account-wall">
                     <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                         alt="">
-                    <form class="form-signin">
-                    <input type="text" class="form-control" placeholder="Email" required autofocus>
-                    <input type="password" class="form-control" placeholder="Password" required>
+                    <form action="#" method="post" class="form-signin">
+                    {% csrf_token %}
+                    <input type="text" class="form-control" placeholder="Email" name="email" required autofocus>
+                    <input type="password" class="form-control" placeholder="Password" name="password" required>
                     <button class="btn btn-lg btn-success btn-block" type="submit">
                         Sign in</button>
                     <label class="checkbox pull-left">
                     </label>
                     </form>
                 </div>
-                <a href="http://127.0.0.1:8000/Drive/Registro" class="text-center new-account">Crear Cuenta </a>
+                <a href="{% url "Drive-registro" %}" class="text-center new-account">Crear Cuenta </a>
             </div>
         </div>
     </div>
