--- a/Drive_Calendar/templates/LogIn_Calendar.html
+++ b/Drive_Calendar/templates/LogIn_Calendar.html
@@ -3,11 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png" />
-	<link rel="icon" type="image/png" href="../assets/img/favicon.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}" />
+	<link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>App Drive | Registro</title>
+	<title>Calendar | Log In</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -31,22 +31,21 @@
         <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <h1 class="text-center login-title">Registro de App Drive</h1>
+                <h1 class="text-center login-title">Inicia sesión en App Calendar</h1>
                 <div class="account-wall">
-                    <center><h2>Registro</h2></center>
-                    <form action="{% url "drive-reg" %}" method="post" class="form-signin">
+                    <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                        alt="">
+                    <form action="#" method="post" class="form-signin">
                     {% csrf_token %}
-                    <input type="text" class="form-control" name="email" placeholder="Email o Usuario" required autofocus>
-                    <input type="password" class="form-control" name="password" minlength="4" placeholder="Password" required>
+                    <input type="text" class="form-control" placeholder="Email" name="email" required autofocus>
+                    <input type="password" class="form-control" placeholder="Password" name="password" required>
                     <button class="btn btn-lg btn-success btn-block" type="submit">
-                        Registrar</button>
-                    <p>
-                         <a href="{% url "Drive-logIn" %}" class="btn btn-lg btn-primary btn-block" >Ir a Log In</a>                        
-                    </p>
+                        Sign in</button>
                     <label class="checkbox pull-left">
                     </label>
                     </form>
                 </div>
+                <a href="{% url "Calendar-registro" %}" class="text-center new-account">Crear Cuenta </a>
             </div>
         </div>
     </div>
