--- a/Drive_Calendar/templates/Registro_Calendar.html
+++ b/Drive_Calendar/templates/Registro_Calendar.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" href="../assets/img/favicon.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>App Drive | Registro</title>
+	<title>Calendar | Registro</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -31,17 +31,17 @@
         <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <h1 class="text-center login-title">Registro de App Drive</h1>
+                <h1 class="text-center login-title">Registro de Calendar</h1>
                 <div class="account-wall">
                     <center><h2>Registro</h2></center>
-                    <form action="{% url "drive-reg" %}" method="post" class="form-signin">
+                    <form action="{% url "calendar-reg" %}" method="post" class="form-signin">
                     {% csrf_token %}
                     <input type="text" class="form-control" name="email" placeholder="Email o Usuario" required autofocus>
                     <input type="password" class="form-control" name="password" minlength="4" placeholder="Password" required>
                     <button class="btn btn-lg btn-success btn-block" type="submit">
                         Registrar</button>
                     <p>
-                         <a href="{% url "Drive-logIn" %}" class="btn btn-lg btn-primary btn-block" >Ir a Log In</a>                        
+                         <a href="{% url "Calendar-logIn" %}" class="btn btn-lg btn-primary btn-block" >Ir a Log In</a>                        
                     </p>
                     <label class="checkbox pull-left">
                     </label>
