--- a/Drive_Calendar/templates/index.html
+++ b/Drive_Calendar/templates/index.html
@@ -38,13 +38,13 @@
                     <p>
                        <!--<button class="btn btn-lg btn-success btn-block" type="button">
                         Ir a Calendar</button> -->
-                        <a href="#" class="btn btn-lg btn-success btn-block" >Ir a Calendar</a>
+                        <a href="{% url "Calendar-logIn" %}" class="btn btn-lg btn-success btn-block" >Ir a Calendar</a>
                     </p>
                     
                     <p>
                         <!--<button class="btn btn-lg btn-primary btn-block" type="button">
                         Ir a App Drive</button>-->
-                        <a href="http://127.0.0.1:8000/Drive/LogIn" class="btn btn-lg btn-primary btn-block" >Ir a App Drive</a>
+                        <a href="{% url "Drive-logIn" %}" class="btn btn-lg btn-primary btn-block" >Ir a App Drive</a>
                     </p>
                     <label class="checkbox pull-left">
                     </label>
