--- a/Drive_Calendar/templates/LogIn.html
+++ b/Drive_Calendar/templates/LogIn.html
@@ -35,7 +35,7 @@
                 <div class="account-wall">
                     <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                         alt="">
-                    <form action="#" method="post" class="form-signin">
+                    <form action="{% url "drive-ing" %}" method="post" class="form-signin">
                     {% csrf_token %}
                     <input type="text" class="form-control" placeholder="Email" name="email" required autofocus>
                     <input type="password" class="form-control" placeholder="Password" name="password" required>
